--- a/src/index.css
+++ b/src/index.css
@@ -140,4 +140,8 @@
   .animate-spin-reverse {
     animation: spin 1s linear infinite reverse;
   }
+
+  .w-card {
+    width: calc((var(--container-7xl) / 3) - 1rem);
+  }
 }
